2001-01-26  Eskil Olsen  <eskil@eazel.com>

	reviewed by: Mike Fleming <mfleming@eazel.com>

	* components/services/install/nautilus-view/nautilus-service-instal
	l-view.c: (nautilus_service_install_done):
	check username !- NULL before passing to strcasecmp

2001-01-26  Eskil Olsen  <eskil@eazel.com>

	reviewed by: Ramiro Estrugo <ramiro@eazel.com>

	* components/services/install/command-line/eazel-test-packsys.c:
	(test_version_compare):
	Testing the Mozilla hack...
	
	* components/services/install/lib/eazel-package-system-rpm3.c:
	(eazel_package_system_rpm3_compare_version):
	Special case for Mxx versions because rpmvercmp is not obeying
	the laws of mathematics...
	
	* components/services/install/lib/eazel-softcat.c:
	(get_search_url_for_package):
	Fix for 6055 - no longer use hardcoded RedHat62 as distro.

2001-01-26  Robin * Slomkowski  <rslomkow@eazel.com>

	* nautilus.spec.in: added  nautilus-change-password-view

2001-01-26  Maciej Stachowiak  <mjs@eazel.com>

	reviewed by: John Harper  <jsh@eazel.com>

	* src/nautilus-window-manage-views.c
	(disconnect_and_destroy_sidebar_panel): hold a ref on the widget
	during this function, to avoid it being finalized before we get to
	the destroy call. This avoids some bad casts mentioned in the
	reopened bug 5997.

2001-01-26  Dan Mueth <dan@eazel.com>

	* user-guide/C/sgml/nautilus.sgml: Adding this file which 
	was omitted earlier resulting in breakage of user manual.

2001-01-26  Ramiro Estrugo  <ramiro@eazel.com>

	reviewed by: Robin * Slomkowski  <rslomkow@eazel.com>
	
	* helper-scripts/nautilus-verify-rpm.sh:
	Fix bug 4984 - Nautilus doesn't provide debugging information if
	library damaged or missing.  The problem was the helper script
	that make sure installed nautilus and bonobo rpms are sane was
	checking for the wrong version of bonobo.  0.26 (pr2) vs 0.33
	(pr3).
	
2001-01-26  Eskil Olsen  <eskil@eazel.com>

	reviewed by: Ramiro & Pavel

	* components/rpmview/nautilus-rpm-view-install.c: